<resources>
    <string name="app_name">QuizApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Ranking</string>
    <string name="menu_gallery">Quizzes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="key_bundle">key_titulo</string>
    <string name="title">Horizon Zero Down</string>
    <string name="secondary_text">Video Game</string>
    <string name="supporting_text">Horizon Zero Dawn is a 2017 action role-playing game developed by Guerrilla Games and published by Sony Interactive Entertainment. The plot follows Aloy, a young huntress in a world overrun by machines, who sets out to uncover her past. The player uses ranged weapons, a spear, and stealth to combat mechanical creatures and other enemy forces. A skill tree provides the player with new abilities and bonuses. The player can explore the open world to discover locations and take on side quests. It was released for the PlayStation 4 in 2017 and Microsoft Windows in 2020.</string>
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="done_time">Done!</string>
    <string name="highscores">Highscores</string>
    <string name="quizzes">Quizzes</string>
    <string name="no_rankings_available">No Rankings Available</string>
    <string name="msg_de_bienvenida">Hi there!\nBienvenid@ a la version\n1.0.0 de esta aplicacion\nespero no la hagas tronar\ny que te diviertas\ndescubriendola.</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="configurations">Configurations</string>
    <string name="mute_music">Mute Music</string>
    <string name="volume">Volume</string>
    <string name="about">About</string>
    <string name="application_developed_by_armandos98_for_the_monthly_challenge_organized_by_mouredev_corresponding_to_the_month_of_march_2022">Application developed by @ArmandoS98 for the monthly challenge organized by @Mouredev, corresponding to the month of March 2022.</string>
    <string name="talk_is_cheap_show_me_the_code">\'Talk is cheap. Show me the code!\'</string>
    <string name="github">github</string>
    <string name="linkedin">linkedin</string>

</resources>